classDiagram
    class Owner {
        +name: string
        +available_time_windows: list~tuple~
        +pets: list~Pet~
        +add_pet(pet: Pet) void
        +get_pets() list~Pet~
    }

    class Pet {
        +name: string
        +species: string
        +age: int
        +tasks: list~Task~
        +max_tasks: int
        +add_task(task: Task) void
        +get_tasks() list~Task~
    }

    class Task {
        +title: string
        +duration_minutes: int
        +priority: string
        +frequency: string
        +completed: bool
        +days_of_week: list~str~
        +due_date: date
        +mark_complete() void
        +is_high_priority() bool
        +__str__() string
    }

    class Scheduler {
        +owner: Owner
        +last_schedule: list~Task~
        +last_schedule_details: list~tuple~
        -_unscheduled: list~tuple~
        +generate_schedule() list~Task~
        +sort_by_time() list~tuple~
        +get_tasks_for_pet(pet_name: str) list~Task~
        +get_tasks_by_status(completed: bool) list~tuple~
        +mark_task_complete(pet: Pet, task: Task) Task
        +detect_conflicts() list~str~
        -_get_all_tasks() list~Task~
        -_window_minutes() list~int~
    }

    class Helpers {
        <<module>>
        +_normalize_windows(windows) list~tuple~
        +_mins_to_time(mins: int) str
    }

    Owner "1" o-- "0..*" Pet : owns
    Pet "1" *-- "0..15" Task : contains
    Scheduler "1" --> "1" Owner : schedules for
    Scheduler ..> Helpers : uses
    Owner ..> Helpers : uses